Fixed systemd/sysvinit/upstart installation routines.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bloonix-plugins-pgsql (0.14-1) unstable; urgency=low
+
+    * Extra release because the gpg key of bloonix is updated.
+
+ -- Jonny Schulz <js@bloonix.de>  Tue, 29 Mar 2016 02:52:04 +0200
+
 bloonix-plugins-pgsql (0.13-1) unstable; urgency=low
 
     * Fixed blks_hit key.
