--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+bloonix-plugins-pgsql (0.14) released at 2016-03-28
+
+    * Extra release because the gpg key of bloonix is updated.
+
 bloonix-plugins-pgsql (0.13) released at 2014-11-28
 
     * Fixed blks_hit key.
